--- a/ProjectForCourses/ProjectForCourses/ProjectForCourses.csproj
+++ b/ProjectForCourses/ProjectForCourses/ProjectForCourses.csproj
@@ -60,10 +60,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base.cs" />
-    <Compile Include="Demo.cs" />
+    <Compile Include="DevByTest.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="MyHtml.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegistrationForm.cs" />
+    <Compile Include="RegistrationFormManager.cs" />
     <Compile Include="RegistrationFormConfig.cs" />
   </ItemGroup>
   <ItemGroup>
